# THU-HKU

./: .gitignore  README.md
docs/: GIT_TUTORIAL.md
src/bike_balance_ros2/: DEPLOY.md  calibrate_steer.py  package.xml  setup.cfg  setup.py  test_signs.py
src/bike_balance_ros2/bike_balance/: __init__.py  balance_node.py  calibrate_bias.py
src/bike_balance_ros2/launch/: balance.launch.py
src/bike_controller/: package.xml  setup.cfg  setup.py
src/bike_controller/bike_controller/: balance_executor.py  balance_node.py  bicycle_model.py  bicycle_params.yaml  controller.py  kickstand_speed_node.py  plot_bike_log.py
src/bike_controller/launch/: bike_control.launch.py  bike_control_auto_no_rc.launch.py  bike_control_pole.launch.py  bike_control_pole_auto_no_rc.launch.py
src/bike_teleop/: package.xml  setup.cfg  setup.py
src/bike_teleop/bike_teleop/: force_auto_ref.py  servo_calibrator.py  teleop_node.py  teleop_supervisor.py
src/bike_teleop/launch/: bike_teleop.launch.py
src/can_motor_controller/: package.xml  setup.cfg  setup.py
src/can_motor_controller/can_motor_controller/: can_interface.py  motor.py  motor_controller_node.py  motor_controller_node0.py  motor_group.py  protocol.py  steer_limit_tester.py  steer_timing_test_ros.py  zero_steering.py
src/can_motor_controller_MIT/: README.md  package.xml  setup.cfg  setup.py
src/can_motor_controller_MIT/can_motor_controller_mit/: can_interface.py  motor.py  (+3 more)
src/imu_publisher/: package.xml  setup.py
src/sbus_receiver/: package.xml  setup.cfg  setup.py
src/servo_controller_py/: package.xml  setup.py
(+9 files in other folders)
